--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,65 +5,97 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="5dp"
     tools:context="com.ayst.sample.MainActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="其它" />
+
     <LinearLayout
-        android:gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:background="@drawable/bg_group"
+        android:padding="3dp"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btn_root_test"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="root测试" />
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btn_silent_install"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="静默安装" />
+            <Button
+                android:id="@+id/btn_root_test"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="root测试" />
 
-        <Button
-            android:id="@+id/btn_reboot"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="5秒重启" />
+            <Button
+                android:id="@+id/btn_silent_install"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="静默安装" />
 
-        <Button
-            android:id="@+id/btn_start_app"
-            android:layout_width="wrap_content"
+            <Button
+                android:id="@+id/btn_reboot"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="5秒重启" />
+
+            <Button
+                android:id="@+id/btn_start_app"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="5秒启动设置" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="5秒启动设置" />
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ToggleButton
+                android:id="@+id/btn_camera"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textOff="打开相机"
+                android:textOn="关闭相机" />
+
+            <ToggleButton
+                android:id="@+id/btn_sensor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textOff="无人"
+                android:textOn="有人" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/layout_camera"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+        </LinearLayout>
+
     </LinearLayout>
 
-    <LinearLayout
-        android:gravity="center_vertical"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ToggleButton
-            android:id="@+id/btn_camera"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textOn="关闭相机"
-            android:textOff="打开相机"/>
-
-        <ToggleButton
-            android:id="@+id/btn_sensor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textOn="有人"
-            android:textOff="无人"/>
-
-    </LinearLayout>
+        android:layout_marginTop="10dp"
+        android:text="GPIO" />
 
     <LinearLayout
-        android:gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/bg_group"
+        android:padding="3dp"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <ToggleButton
@@ -71,13 +103,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:minWidth="100dp"
-            android:textOn="GPIO-LOW"
-            android:textOff="GPIO-HIGHT"/>
+            android:textOff="GPIO-HIGHT"
+            android:textOn="GPIO-LOW" />
 
         <Spinner
             android:id="@+id/spn_gpio"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
         <RadioGroup
             android:layout_width="wrap_content"
@@ -88,30 +120,174 @@
                 android:id="@+id/rdo_gpio_input"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="输入"/>
+                android:text="输入" />
 
             <RadioButton
                 android:id="@+id/rdo_gpio_output"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="输出"/>
+                android:text="输出" />
 
             <RadioButton
                 android:id="@+id/rdo_gpio_key"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="KEY"/>
+                android:text="KEY" />
 
         </RadioGroup>
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="看门狗" />
+
     <LinearLayout
-        android:id="@+id/layout_camera"
-        android:gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:background="@drawable/bg_group"
+        android:padding="3dp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ToggleButton
+                android:id="@+id/btn_switch_watchdog"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="100dp"
+                android:textOff="打开看门狗"
+                android:textOn="关闭看门狗" />
+
+            <Button
+                android:id="@+id/btn_set_watchdog_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="设置超时" />
+
+            <Button
+                android:id="@+id/btn_heartbeat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="发送心跳" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="超时时间："
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/tv_watchdog_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/colorAccent" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="定时开关机" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_group"
+        android:padding="3dp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ToggleButton
+                android:id="@+id/btn_set_power_on_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textOff="定时开机"
+                android:textOn="定时开机" />
+
+            <ToggleButton
+                android:id="@+id/btn_set_power_off_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textOff="定时关机"
+                android:textOn="定时关机" />
+
+            <ToggleButton
+                android:id="@+id/btn_set_reboot"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textOff="定时重启"
+                android:textOn="定时重启" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="开机时间："
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/tv_power_on_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/colorAccent" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:text="关机时间："
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/tv_power_off_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/colorAccent" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:text="重启时间："
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/tv_reboot_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/colorAccent" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
