支持USB传输测试

--- a/app/src/main/res/layout/activity_main_flexbox.xml
+++ b/app/src/main/res/layout/activity_main_flexbox.xml
@@ -297,6 +297,42 @@
 
             </com.google.android.flexbox.FlexboxLayout>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="USB传输" />
+
+            <com.google.android.flexbox.FlexboxLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_group"
+                android:padding="3dp"
+                app:alignContent="stretch"
+                app:alignItems="stretch"
+                app:flexWrap="wrap">
+
+                <Spinner
+                    android:id="@+id/spn_usb"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"/>
+
+                <ToggleButton
+                    android:id="@+id/btn_listen_usb"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textOff="监听"
+                    android:textOn="监听" />
+                
+                <TextView
+                    android:id="@+id/tv_usb_data"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:background="@drawable/bg_group"/>
+
+            </com.google.android.flexbox.FlexboxLayout>
+
         </LinearLayout>
 
     </ScrollView>
