--- a/app/src/main/res/layout/activity_main_flexbox.xml
+++ b/app/src/main/res/layout/activity_main_flexbox.xml
@@ -19,7 +19,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="其它" />
+                android:text="Other" />
 
             <com.google.android.flexbox.FlexboxLayout
                 android:layout_width="match_parent"
@@ -34,39 +34,39 @@
                     android:id="@+id/btn_root_test"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="root测试" />
+                    android:text="Root test" />
 
                 <Button
                     android:id="@+id/btn_silent_install"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="静默安装" />
+                    android:text="Silent installation" />
 
                 <Button
                     android:id="@+id/btn_reboot"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="重启" />
+                    android:text="Reboot" />
 
                 <Button
                     android:id="@+id/btn_shutdown"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="关机" />
+                    android:text="Shutdown" />
 
                 <ToggleButton
                     android:id="@+id/btn_camera"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textOff="打开相机"
-                    android:textOn="关闭相机" />
+                    android:textOff="Open camera"
+                    android:textOn="Close camera" />
 
                 <ToggleButton
                     android:id="@+id/btn_sensor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textOff="无人"
-                    android:textOn="有人" />
+                    android:textOff="Far"
+                    android:textOn="Near" />
 
                 <LinearLayout
                     android:id="@+id/layout_camera"
@@ -118,19 +118,19 @@
                         android:id="@+id/rdo_gpio_input"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="输入" />
+                        android:text="Input" />
 
                     <RadioButton
                         android:id="@+id/rdo_gpio_output"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="输出" />
+                        android:text="Output" />
 
                     <RadioButton
                         android:id="@+id/rdo_gpio_key"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="KEY" />
+                        android:text="Key" />
 
                 </RadioGroup>
 
@@ -140,7 +140,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="看门狗" />
+                android:text="Watchdog" />
 
             <com.google.android.flexbox.FlexboxLayout
                 android:layout_width="match_parent"
@@ -156,20 +156,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:minWidth="100dp"
-                    android:textOff="打开看门狗"
-                    android:textOn="关闭看门狗" />
+                    android:textOff="Open"
+                    android:textOn="Close" />
 
                 <Button
                     android:id="@+id/btn_set_watchdog_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="设置超时" />
+                    android:text="Set the timeout" />
 
                 <Button
                     android:id="@+id/btn_heartbeat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="发送心跳" />
+                    android:text="Send a heartbeat" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -180,7 +180,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="超时时间："
+                        android:text="Timout:"
                         android:textColor="@color/black" />
 
                     <TextView
@@ -198,7 +198,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="定时开关机" />
+                android:text="Timing switcher" />
 
             <com.google.android.flexbox.FlexboxLayout
                 android:layout_width="match_parent"
@@ -213,22 +213,22 @@
                     android:id="@+id/btn_set_power_on_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textOff="定时开机"
-                    android:textOn="定时开机" />
+                    android:textOff="Timing boot"
+                    android:textOn="Timing boot" />
 
                 <ToggleButton
                     android:id="@+id/btn_set_power_off_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textOff="定时关机"
-                    android:textOn="定时关机" />
+                    android:textOff="Timing shutdown"
+                    android:textOn="Timing shutdown" />
 
                 <ToggleButton
                     android:id="@+id/btn_set_reboot"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textOff="定时重启"
-                    android:textOn="定时重启" />
+                    android:textOff="Timing reboot"
+                    android:textOn="Timing reboot" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -239,7 +239,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="开机时间："
+                        android:text="Boot time:"
                         android:textColor="@color/black" />
 
                     <TextView
@@ -261,7 +261,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
-                        android:text="关机时间："
+                        android:text="Shutdown time:"
                         android:textColor="@color/black" />
 
                     <TextView
@@ -283,7 +283,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
-                        android:text="重启时间："
+                        android:text="Reboot time:"
                         android:textColor="@color/black" />
 
                     <TextView
@@ -301,7 +301,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="USB传输" />
+                android:text="Usb transmission" />
 
             <com.google.android.flexbox.FlexboxLayout
                 android:layout_width="match_parent"
@@ -322,8 +322,8 @@
                     android:id="@+id/btn_listen_usb"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textOff="监听"
-                    android:textOn="监听" />
+                    android:textOff="Listen"
+                    android:textOn="Listen" />
                 
                 <TextView
                     android:id="@+id/tv_usb_data"
