支持A2dpSink歌曲信息获取

--- a/app/src/main/res/layout/activity_main_flexbox.xml
+++ b/app/src/main/res/layout/activity_main_flexbox.xml
@@ -611,6 +611,36 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:text="A2dpSink" />
+
+            <com.google.android.flexbox.FlexboxLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_group"
+                android:padding="3dp"
+                app:alignContent="stretch"
+                app:alignItems="stretch"
+                app:flexWrap="wrap">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Media Info:\n"
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/tv_a2dpsink_media_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textColor="@color/colorAccent" />
+
+            </com.google.android.flexbox.FlexboxLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="Usb transmission" />
 
             <com.google.android.flexbox.FlexboxLayout
